Simple bug fixes: advised: - default text in genre dropwdown - slider in accordion to avoid overlaps about: - amended privacy policy general: - fixed cursor look on titles and subtitles - fixed higlighted ghost nav menu login: -arranged login popup

--- a/webDisplay/static/webDisplay/style.css
+++ b/webDisplay/static/webDisplay/style.css
@@ -12,6 +12,11 @@ li {
     margin: 0 0 3px 0;
 }
 
+.title,
+.subtitle {
+    cursor: default;
+}
+
 .clickable {
     cursor: pointer;
 }
@@ -177,4 +182,8 @@ li {
 
 #downArrow {
     bottom: 0
+}
+
+#myRange {
+    width: 100%;
 }
